ingress-examples/ingress-overview-html-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /overview.html
  name: overview-html-root
spec:
  ingressClassName: nginx
  rules:
  - host: your.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
