ingress-examples/ingress-subdir-non-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-ingress-2
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # remove path prefix from requests before sending to kubecost-frontend
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # add trailing slash to requests of index
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/kubecost)$ $1/ permanent;
spec:
  ingressClassName: nginx
  rules:
  - host: your.com
    http:
      paths:
      - path: /kubecost(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
